# kursovaya3

./: README.md  pyproject.toml
src/: main.py  utilts.py
tests/: test_utilts.py
