[tool.poetry]
name = "kursovaya3"
version = "0.1.0"
description = ""
authors = ["Anton Gromov <antongromov1234@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"